--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:docker": "concurrently -n \"TSC,VITE\" -c \"blue,green\" \"npm run tsc:watch\" \"npm run dev -- --host 0.0.0.0\"",
+    "tsc:watch": "tsc --noEmit --watch --preserveWatchOutput",
     "server": "node server/index.js",
     "server:dev": "nodemon server/index.js",
     "build": "tsc && vite build",
@@ -44,6 +46,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.10.0",
+    "@types/papaparse": "^5.5.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.0.4",
@@ -51,6 +54,7 @@
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "concurrently": "^9.2.1",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
